# fishregression

./: Dockerfile  pyproject.toml
LB/: default.conf
note/: LinearRegression.ipynb  Untitled.ipynb  test.ipynb
src/fishregression/: cli.py  lr_model.pkl  main.py
src/fishregression/model/: manager.py
