[project]
name = "fishregression"
version = "0.1.1"
description = "Default template for PDM package"
authors = [
    {name = "lsiwh37249", email = "lsiwh37249@gmail.com"},
]
dependencies = [
    "fastapi>=0.112.2",
    "uvicorn[standard]>=0.30.6",
    "scikit-learn>=1.5.1",
    "jupyter>=1.1.1",
    "notebook>=7.2.2",
    "matplotlib>=3.9.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[project.scripts]
pp = "fishregression.cli:predict"
gw = "fishregression.main:get_weight"

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
    "matplotlib>=3.9.2",
]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]
